# kimodo

./: setup.py
MotionCorrection/: CMakeLists.txt
MotionCorrection/src/cpp/Math/: SIMD.h  Scalar.h
kimodo/demo/: app.py
kimodo/model/: kimodo_model.py  load_model.py
kimodo/model/llm2vec/: llm2vec_wrapper.py
kimodo/scripts/: generate.py
